Fixed bug on book today button
The container div for the slide buttons was covering over the book today
button. It was not noticable since the div was transparent but
increasing the z-index of the slide to 10 similar to the slide buttons
fixed the issue.

--- a/static/css/input.css
+++ b/static/css/input.css
@@ -18,7 +18,7 @@
     }
 
     .slide {
-        @apply ease-in-out duration-300;
+        @apply ease-in-out duration-300 z-10;
     }
 
     .slide_btn {
